--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Album" asp-action="Index">Nickloline</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Albums" asp-action="Index">Nickloline</a>
                         </li>
                     </ul>
                 </div>
